// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div>
  <mock-styled.div
    key="0"
  >
    <Component
      hasPadding={false}
    >
      <Component
        heading="Personal Details"
        menu={
          <div>
            <div
              className="undefined undefined"
            >
              <FaCheck />
              <span>
                Completed
              </span>
            </div>
            <Unknown
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Edit
            </Unknown>
          </div>
        }
      >
        <div
          className="undefined undefined"
        >
          <FaCheck />
          <span>
            Completed
          </span>
        </div>
      </Component>
    </Component>
  </mock-styled.div>
  <mock-styled.div
    key="1"
  >
    <Component
      hasPadding={false}
    >
      <Component
        heading="Primary ID"
        menu={
          <div>
            <div
              className="undefined undefined"
            >
              <FaTimes />
              <span>
                Incomplete
              </span>
            </div>
            <Unknown
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Edit
            </Unknown>
          </div>
        }
      >
        <div
          className="undefined undefined"
        >
          <FaTimes />
          <span>
            Incomplete
          </span>
        </div>
      </Component>
    </Component>
  </mock-styled.div>
  <mock-styled.div
    key="2"
  >
    <Component
      hasPadding={false}
    >
      <Component
        heading="Secondary ID"
        menu={
          <div>
            <div
              className="undefined undefined"
            >
              <FaCheck />
              <span>
                Completed
              </span>
            </div>
            <Unknown
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Edit
            </Unknown>
          </div>
        }
      >
        <div
          className="undefined undefined"
        >
          <FaCheck />
          <span>
            Completed
          </span>
        </div>
      </Component>
    </Component>
  </mock-styled.div>
  <mock-styled.div
    key="3"
  >
    <Component
      hasPadding={false}
    >
      <Component
        heading="Address Information"
        menu={
          <div>
            <div
              className="undefined undefined"
            >
              <FaTimes />
              <span>
                Incomplete
              </span>
            </div>
            <Unknown
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Edit
            </Unknown>
          </div>
        }
      >
        <div
          className="undefined undefined"
        >
          <FaTimes />
          <span>
            Incomplete
          </span>
        </div>
      </Component>
    </Component>
  </mock-styled.div>
  <mock-styled.div
    key="4"
  >
    <Component
      hasPadding={false}
    >
      <Component
        heading="Declaration Risk Management"
        menu={
          <div>
            <div
              className="undefined undefined"
            >
              <FaTimes />
              <span>
                Incomplete
              </span>
            </div>
            <Unknown
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              Edit
            </Unknown>
          </div>
        }
      >
        <div
          className="undefined undefined"
        >
          <FaTimes />
          <span>
            Incomplete
          </span>
        </div>
      </Component>
    </Component>
  </mock-styled.div>
  <mock-styled.div
    key="5"
  >
    <Component
      hasPadding={false}
    >
      <Component
        heading="Report"
        menu={
          <div>
            <Unknown
              onClick={[MockFunction]}
              type="button"
              variant="primary"
            >
              View
            </Unknown>
          </div>
        }
      />
    </Component>
  </mock-styled.div>
</div>
`;

exports[`checklist-detail ChecklistDetail should match snapshot when loading 1`] = `<Component />`;

exports[`checklist-detail ChecklistDetail should match snapshot when not loading 1`] = `
<ErrorBoundary>
  <Component
    hasBackground={false}
    hasPadding={false}
  >
    <Connect(Component) />
    <mock-styled.div
      key="0"
    >
      <Component
        hasPadding={false}
      >
        <Component
          heading="Personal Details"
          menu={
            <div>
              <div
                className="undefined undefined"
              >
                <FaCheck />
                <span>
                  Completed
                </span>
              </div>
              <Unknown
                type="button"
                variant="primary"
              >
                Edit
              </Unknown>
            </div>
          }
        >
          <div
            className="undefined undefined"
          >
            <FaCheck />
            <span>
              Completed
            </span>
          </div>
        </Component>
      </Component>
    </mock-styled.div>
    <mock-styled.div
      key="1"
    >
      <Component
        hasPadding={false}
      >
        <Component
          heading="Primary ID"
          menu={
            <div>
              <div
                className="undefined undefined"
              >
                <FaTimes />
                <span>
                  Incomplete
                </span>
              </div>
              <Unknown
                type="button"
                variant="primary"
              >
                Edit
              </Unknown>
            </div>
          }
        >
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
        </Component>
      </Component>
    </mock-styled.div>
    <mock-styled.div
      key="2"
    >
      <Component
        hasPadding={false}
      >
        <Component
          heading="Secondary ID"
          menu={
            <div>
              <div
                className="undefined undefined"
              >
                <FaCheck />
                <span>
                  Completed
                </span>
              </div>
              <Unknown
                type="button"
                variant="primary"
              >
                Edit
              </Unknown>
            </div>
          }
        >
          <div
            className="undefined undefined"
          >
            <FaCheck />
            <span>
              Completed
            </span>
          </div>
        </Component>
      </Component>
    </mock-styled.div>
    <mock-styled.div
      key="3"
    >
      <Component
        hasPadding={false}
      >
        <Component
          heading="Address Information"
          menu={
            <div>
              <div
                className="undefined undefined"
              >
                <FaTimes />
                <span>
                  Incomplete
                </span>
              </div>
              <Unknown
                type="button"
                variant="primary"
              >
                Edit
              </Unknown>
            </div>
          }
        >
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
        </Component>
      </Component>
    </mock-styled.div>
    <mock-styled.div
      key="4"
    >
      <Component
        hasPadding={false}
      >
        <Component
          heading="Declaration Risk Management"
          menu={
            <div>
              <div
                className="undefined undefined"
              >
                <FaTimes />
                <span>
                  Incomplete
                </span>
              </div>
              <Unknown
                type="button"
                variant="primary"
              >
                Edit
              </Unknown>
            </div>
          }
        >
          <div
            className="undefined undefined"
          >
            <FaTimes />
            <span>
              Incomplete
            </span>
          </div>
        </Component>
      </Component>
    </mock-styled.div>
    <mock-styled.div
      key="5"
    >
      <Component
        hasPadding={false}
      >
        <Component
          heading="Report"
          menu={
            <div>
              <Unknown
                type="button"
                variant="primary"
              >
                View
              </Unknown>
            </div>
          }
        />
      </Component>
    </mock-styled.div>
  </Component>
  <withRouter()
    afterClose={[MockFunction]}
    id="123"
    modalContentType="PROFILE"
    visible={true}
  />
</ErrorBoundary>
`;
